* Changed plugin locking  @Code0x58
* Bug fix - clean incorrent UTF-8 byte sequences when loading from file @dirtyfilthy
* Merged 31 new plugins by Bhavin Senjaliya and 22 plugin updates from the unofficial WhatWeb gem at https://rubygems.org/gems/whatweb/
* Updated all plugins with an authors array to show multiple authors
* Reached over 1800 plugins

* 48 New plugins
	1n1-hosting.rb - Bhavin Senjaliya (@bhavin1223)
	amazon-elastic-load-balancer.rb - Bhavin Senjaliya (@bhavin1223)
	azure.rb - Bhavin Senjaliya (@bhavin1223)
	bad-behaviour-anti-spam-plugin.rb - Bhavin Senjaliya (@bhavin1223)
	clickmotive.rb - Bhavin Senjaliya (@bhavin1223)
	cdk-connected-website.rb - Bhavin Senjaliya (@bhavin1223)
	craftcms.rb - Bhavin Senjaliya (@bhavin1223)
	f5-big-ip.rb - Bhavin Senjaliya (@bhavin1223)
	hubspot.rb - Bhavin Senjaliya (@bhavin1223)
	jw-player.rb - Bhavin Senjaliya (@bhavin1223)
	laravel.rb - Bhavin Senjaliya (@bhavin1223)
	mezzanine.rb - Bhavin Senjaliya (@bhavin1223)
	moonfruit.rb - Bhavin Senjaliya (@bhavin1223)
	netsuite.rb - Bhavin Senjaliya (@bhavin1223)
	nop-commerce.rb - Bhavin Senjaliya (@bhavin1223)
	pyro-cms.rb - Bhavin Senjaliya (@bhavin1223)
	sailsjs.rb - Bhavin Senjaliya (@bhavin1223)
	schoolwires-centricity.rb - Bhavin Senjaliya (@bhavin1223)
	shopify.rb - Bhavin Senjaliya (@bhavin1223)
	sitecore.rb - Bhavin Senjaliya (@bhavin1223)
	square-space.rb - Bhavin Senjaliya (@bhavin1223)
	tealeaf.rb - Bhavin Senjaliya (@bhavin1223)
	teleflora.rb - Bhavin Senjaliya (@bhavin1223)
	unbounce.rb - Bhavin Senjaliya (@bhavin1223)
	website-tonight.rb - Bhavin Senjaliya (@bhavin1223)
	webtrends.rb - Bhavin Senjaliya (@bhavin1223)
	weebly.rb - Bhavin Senjaliya (@bhavin1223)
	wix.rb - Bhavin Senjaliya (@bhavin1223)
	wordfence.rb - Bhavin Senjaliya (@bhavin1223)
	world-now.rb - Bhavin Senjaliya (@bhavin1223)
	wpml.rb - Bhavin Senjaliya (@bhavin1223)
	bigcommerce.rb - Claudio Salazar (@csalazar)
	demandware.rb - Claudio Salazar (@csalazar)